objects/Demo_Scoping_Request__c.object
<CustomObject>
    <fields>
        <fullName>Requested_Scoping_Time_1__c</fullName>
        <inlineHelpText>The preferred start time for the first requested scoping date</inlineHelpText>
        <label>Requested Scoping Time #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Time_2__c</fullName>
        <inlineHelpText>The preferred start time for the second Requested Scoping Date</inlineHelpText>
        <label>Requested Scoping Time #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Time_3__c</fullName>
        <inlineHelpText>The preferred start time for the third Requested Scoping Date</inlineHelpText>
        <label>Requested Scoping Time #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Timezone__c</fullName>
        <inlineHelpText>Please select the preferred Time Zone for scoping. Time Zones are sorted by their DST Offset (e.g. +0 for GMT/London, +2 for Central Europe, -5 for US Eastern Standard)</inlineHelpText>
        <label>Requested Scoping Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMT–11:00 - Samoa Standard Time (Pacific/Pago_Pago)</fullName>
                </value>
                <value>
                    <fullName>GMT–10:00 - Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
                </value>
                <value>
                    <fullName>GMT–09:00 - Hawaii-Aleutian Standard Time (America/Adak)</fullName>
                </value>
                <value>
                    <fullName>GMT–08:00 - Alaska Daylight Time (America/Anchorage)</fullName>
                </value>
                <value>
                    <fullName>GMT–07:00 - Pacific Daylight Time (America/Los_Angeles)</fullName>
                </value>
                <value>
                    <fullName>GMT–07:00 - Mountain Standard Time (America/Phoenix)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Mountain Standard Time (America/Mazatlan)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Mountain Daylight Time (America/Denver)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Central Standard Time (America/El_Salvador)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Peru Time (America/Lima)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Eastern Standard Time (America/Panama)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Colombia Time (America/Bogota)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Central Daylight Time (America/Mexico_City)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Central Daylight Time (America/Chicago)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Eastern Daylight Time (America/New_York)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Eastern Daylight Time (America/Indiana/Indianapolis)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Atlantic Standard Time (America/Puerto_Rico)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Atlantic Daylight Time (Atlantic/Bermuda)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Chile Summer Time (America/Santiago)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Brasilia Summer Time (America/Sao_Paulo)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Atlantic Daylight Time (America/Halifax)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Argentina Time (America/Argentina/Buenos_Aires)</fullName>
                </value>
                <value>
                    <fullName>GMT–02:00 - South Georgia Standard Time (Atlantic/South_Georgia)</fullName>
                </value>
                <value>
                    <fullName>GMT–01:00 - Cape Verde Time (Atlantic/Cape_Verde)</fullName>
                </value>
                <value>
                    <fullName>GMT+00:00 - Greenwich Mean Time (GMT)</fullName>
                </value>
                <value>
                    <fullName>GMT+01:00 - British Summer Time (Europe/London)</fullName>
                </value>
                <value>
                    <fullName>GMT+02:00 - Central European Summer Time (Europe/Rome)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Arabia Standard Time (Asia/Baghdad)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Moscow Standard Time (Europe/Moscow)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Eastern European Summer Time (Africa/Cairo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_1_Status__c</fullName>
        <inlineHelpText>The status of Reviewer 1's review of this Scoping Request</inlineHelpText>
        <label>Reviewer 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Feedback from Rep</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
                <value>
                    <fullName>Closed Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_2_Status__c</fullName>
        <inlineHelpText>The status of Reviewer 2's review of this Scoping Request</inlineHelpText>
        <label>Reviewer 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Feedback from Rep</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
                <value>
                    <fullName>Closed Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_3_Status__c</fullName>
        <inlineHelpText>The status of Reviewer 3's review of this Scoping Request</inlineHelpText>
        <label>Reviewer 3 Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Feedback from Rep</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
                <value>
                    <fullName>Closed Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Notes__c</fullName>
        <label>Scope Notes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scoping_Request_Type__c</fullName>
        <inlineHelpText>The type(s) of Scoping being requested.  Ctrl+click to select multiple items.</inlineHelpText>
        <label>Scoping Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Meetings Management</fullName>
                </value>
                <value>
                    <fullName>Cvent Attendee Management</fullName>
                </value>
                <value>
                    <fullName>Event Quarterback</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Website Build</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence Reporting</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings Implementation</fullName>
                </value>
                <value>
                    <fullName>Onsite PS</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoping_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether scoping is required as a followup to this Demo Request.  If checked, when the Demo Status is set to "Demo Completed", the appropriate PS/TSE individual(s) will be notified to initiate the scoping process.</inlineHelpText>
        <label>Scoping Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scoping_Status__c</fullName>
        <defaultValue>"New"</defaultValue>
        <inlineHelpText>The current status of this Scoping Request</inlineHelpText>
        <label>Scoping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Scoping Requested</fullName>
                </value>
                <value>
                    <fullName>Awaiting Feedback</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Scoping Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Closed Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Product_Interest__c</fullName>
        <inlineHelpText>Please select the Product of interest for this Demo/Scoping Request.  Ctrl+click to select multiple records.</inlineHelpText>
        <label>Specific Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Conference</fullName>
                </value>
                <value>
                    <fullName>Lanyon Mobile</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Cvent Passkey</fullName>
                </value>
                <value>
                    <fullName>Lanyon Group</fullName>
                </value>
                <value>
                    <fullName>Cvent Transient</fullName>
                </value>
                <value>
                    <fullName>Cvent Implementation</fullName>
                </value>
                <value>
                    <fullName>Event Quarterback</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings</fullName>
                </value>
                <value>
                    <fullName>Dedicated Resources</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                    <isActive>false</isActive>
                    <label>CSN</label>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                    <isActive>false</isActive>
                    <label>CrowdCompass</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current Stage of the related Opportunity</inlineHelpText>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <formula>Opportunity__r.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The TCV from the related Opportunity</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Sale__c</fullName>
        <inlineHelpText>Please indicate whether this product is a potential first-time purchase for the customer or a renewal of an existing subscription.</inlineHelpText>
        <label>Type of Sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NBB</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_an_Agile_Demo_Completed__c</fullName>
        <inlineHelpText>Indicate whether an Agile demo was completed.  Required if Demo Status = "Demo Complete."</inlineHelpText>
        <label>Was an Agile Demo Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watcher_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An individual watching this Demo/Scoping Request who will receive related email notifications</inlineHelpText>
        <label>Watcher 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Watcher_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An individual watching this Demo/Scoping Request who will receive related email notifications</inlineHelpText>
        <label>Watcher 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>allReviewsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in PSA_demoScopingRequestTriggerHandler.scopingReviewsCompleted</description>
        <label>allReviewsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Scoped_Hours__c</fullName>
        <label># of Scoped Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zAwaitingScopingFeedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zAwaitingScopingFeedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zClosed_Demo_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zClosed Demo Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zClosed_Scoping_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zClosed Scoping Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zDemoActionNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDemoActionNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zDemo_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDemo Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zDemo_Followup_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDemo Followup Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zNew_Demo_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zNew Demo Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zNew_Scoping_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zNew Scoping Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zScopingActionNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zScopingActionNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zScoping_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zScoping Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zScoping_Followup_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zScoping Followup Requested</label>
        <type>Checkbox</type>
    </fields>
    <label>PS/TSE Demo/Scoping Request</label>
    <nameField>
        <displayFormat>DSR-{0000000}</displayFormat>
        <label>PS/TSE Demo/Scoping Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS/TSE Demo/Scoping Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Demo_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Demo_Status__c</columns>
        <columns>Specific_Product_Interest__c</columns>
        <columns>Type_of_Sale__c</columns>
        <columns>Requested_Demo_Date_1__c</columns>
        <columns>Onsite_Demo_Location_City_State__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Demo_Scoping_Request__c.Demo_Scoping,Demo_Scoping_Request__c.Post_Demo_Scoping</value>
        </filters>
        <filters>
            <field>Demo_Status__c</field>
            <operation>notEqual</operation>
            <value>New,Demo Completed,Closed - Incomplete</value>
        </filters>
        <label>Active Demo Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Scoping_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Scoping_Status__c</columns>
        <columns>Specific_Product_Interest__c</columns>
        <columns>Type_of_Sale__c</columns>
        <columns>Requested_Scoping_Date_1__c</columns>
        <columns>Primary_Reviewer_1__c</columns>
        <columns>Request_Scoping_Assistance_Onsite__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Demo_Scoping_Request__c.Post_Demo_Scoping,Demo_Scoping_Request__c.Scoping_Only</value>
        </filters>
        <filters>
            <field>Scoping_Status__c</field>
            <operation>notEqual</operation>
            <value>New,Scoping Completed,Closed - Incomplete</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019 12:00 AM</value>
        </filters>
        <label>Active Scoping Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Specific_Product_Interest__c</columns>
        <columns>Type_of_Sale__c</columns>
        <columns>Demo_Status__c</columns>
        <columns>Scoping_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Demo_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Demo_Status__c</columns>
        <columns>Specific_Product_Interest__c</columns>
        <columns>Type_of_Sale__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Was_an_Agile_Demo_Completed__c</columns>
        <columns>Attended_Onsite__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Demo_Scoping_Request__c.Demo_Scoping,Demo_Scoping_Request__c.Post_Demo_Scoping</value>
        </filters>
        <filters>
            <field>Demo_Status__c</field>
            <operation>equals</operation>
            <value>Demo Completed,Closed - Incomplete</value>
        </filters>
        <label>Closed Demo Requests</label>
        <language>en_US</language>
    </listViews>
</CustomObject>